--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="modal-root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
