--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,11 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="%PUBLIC_URL%/sf-ui-text-2/style.css"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <title>React App</title>
   </head>
   <body>
